# ArcLight

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: arg.h  model.h
models/: llama.cpp  minicpm5.cpp  models.h  registry.cpp
nnml/: CMakeLists.txt
nnml/include/: cgraph.h  memory.h  nnml.h  ops.h  tensor.h  thread.h
nnml/src/: cgraph.cpp  memory.cpp  scheduler.cpp  thread.cpp
nnml/src/ops/: common.cpp  ops.cpp  types.cpp
nnml/src/ops/arm/: arm.cpp
nnml/src/ops/x86/: gemm.cpp  x86.cpp
src/: model.cpp
